<resources>
    <string name="app_name">Happ</string>
    <string name="welcome_message">Welcome User!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mobile Energy</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="showLocationBtn">Show My Location</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_test">Test Frag</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_lights">Lights</string>
    <string name="menu_heat">Heating</string>
    <string name="menu_water">Water</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_mylocation">My Location</string>

    <string name="welcome">Welcome, </string>
    <string name ="login_failed">Login Failed</string>
    <string name="invalid_username">Username invalid</string>
    <string name="invalid_password">Password invalid</string>

    <string name="prompt_email">Enter email</string>
    <string name="prompt_password">Enter password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
</resources>