<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_lights"
            android:icon="@drawable/drawer_light_icon"
            android:title="@string/menu_lights" />
        <item
            android:id="@+id/nav_heat"
            android:icon="@drawable/drawer_heat_icon"
            android:title="@string/menu_heat" />
        <item
            android:id="@+id/nav_water"
            android:icon="@drawable/drawer_water_icon"
            android:title="@string/menu_water" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/drawer_settings_icon"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_mylocation"
            android:icon="@drawable/drawer_location_icon"
            android:title="@string/menu_mylocation" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/drawer_statistic_icon"
            android:title="@string/menu_statistics" />
    </group>
</menu>